@@ -1,6 +1,5 @@
 Bugs to fix:
 
-- :q works but :qu :qui and :quit don't.
 x Using column selection causes exception.
 - change commands in visual mode leaves you in visual mode - shouldn't
 - Split text when typing fast after o command.
